force-app/main/default/objects/Cheque_Tracking__c/Cheque_Tracking__c.object-meta.xml
<CustomObject>
    <label>Cheque Submission</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Cheque Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Submissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>