force-app/main/default/objects/Cheque_Tracking__c/fields/Accounts_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounts Acknowledged</label>
    <type>Checkbox</type>
</CustomField>