force-app/main/default/objects/Cheque_Tracking__c/fields/Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No__c</fullName>
    <label>Cheque No</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>