force-app/main/default/objects/Cheque_Tracking__c/fields/Customer_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Cheque</label>
    <type>Checkbox</type>
</CustomField>